Attempt to fix visual spacing/positioning inconsistencies with Question menu activator

--- a/app/javascript/styles/_index.scss
+++ b/app/javascript/styles/_index.scss
@@ -207,8 +207,6 @@ html {
 [data-fb-pagetype="page.multiplequestions"] {
   .EditableCollectionFieldComponent,
   .EditableGroupFieldComponent,
-  .EditableTextFieldComponent,
-  .EditableTextareaFieldComponent,
   .EditableComponentCollectionItem {
     .ActivatedMenu_Activator {
       top: 45px;
